--- a/index.html
+++ b/index.html
@@ -102,18 +102,20 @@ table.wikitablewide td {
                 </tr>
                 <tr style="text-align: center;">
                     <td>
-                        <img src="https://media.alg-wiki.com/assets/event_banner/iris_jp_rerun.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/iris_jp_rerun_skin.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/slow_advance_jp.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/iris_jp_rerun_rate_up.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/jp_06_27.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/ashen_jp.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/ashen_ru_jp.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/ashen_sk_jp.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/ashen_oa_jp.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/pack_jp_731.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/before_the_storm_jp.png" style="width: 100%">
                     </td>
                     <td>
-                        <img src="https://media.alg-wiki.com/assets/event_banner/iris_en.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/iris_en_skin.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/slow_advance_en.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/iris_en_rate_up.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/en_06_27.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/ashen_en.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/ashen_ru_en.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/ashen_sk_en.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/ashen_oa_en.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/pack_en_731.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/approaching_storm_en.png" style="width: 100%">
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -128,26 +130,22 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <commented-ship-display ship="le_malin" new="true" comment="Limited Build - 00:33:00 - 2%"></commented-ship-display>
-                        <commented-ship-display ship="l_opiniatre" new="true" comment="Limited Build - 00:26:00 - 2.5%"></commented-ship-display>
-                        <commented-ship-display ship="jean_bart" comment="Limited Build - 05:50:00 - 1.8%"></commented-ship-display>
-                        <commented-ship-display ship="massachusetts" comment="Limited Build - 05:00:00 - 1.8%"></commented-ship-display>
-                        <commented-ship-display ship="dunkerque" comment="Limited Build - 04:05:00 - 2.5%"></commented-ship-display>
-                        <commented-ship-display ship="surcouf" comment="Limited Build - 00:35:00 - 2.5%"></commented-ship-display>
-                        <commented-ship-display ship="forbin" comment="Limited Build - 00:23:00 - 5%"></commented-ship-display>
-                        <commented-ship-display ship="le_triomphant" comment="Event Shop - 8000 / Drop - B3, D3 (Boss Only)"></commented-ship-display>
-                        <commented-ship-display ship="emile_bertin" comment="Radiant Iris - 10k, 15k, 40k, 60k"></commented-ship-display>
-                        <commented-ship-display ship="le_mars" comment="Event Shop - 2000 / Drop - A3, B2, C3, D2, D3"></commented-ship-display>
+                        <commented-ship-display ship="alabama" new="true" comment="Limited Build - 05:00:00 - 2%"></commented-ship-display>
+                        <commented-ship-display ship="baltimore" new="true" comment="Limited Build - 02:00:00 - 2.0%"></commented-ship-display>
+                        <commented-ship-display ship="birmingham" new="true" comment="Limited Build - 01:25:00 - 2.5%"></commented-ship-display>
+                        <commented-ship-display ship="aylwin" new="true" comment="Limited Build - 00:20:00 - 5.0% / Drop - B/D"></commented-ship-display>
+                        <commented-ship-display ship="cavalla" new="true" comment="Event Shop - 8000 / Drop B3/D3 (Boss Only)"></commented-ship-display>
+                        <commented-ship-display ship="bataan" new="true" comment="Black Battle Star Accumulation"></commented-ship-display>
+                        <commented-ship-display ship="san_juan" new="true" comment="Oil Consumption Accumulation"></commented-ship-display>
                     </td>
                     <td>
-                        <commented-ship-display ship="jean_bart" new="true" comment="Limited Build - 05:50:00 - 2%"></commented-ship-display>
-                        <commented-ship-display ship="massachusetts" new="true" comment="Limited Build - 05:00:00 - 2%"></commented-ship-display>
-                        <commented-ship-display ship="dunkerque" new="true" comment="Limited Build - 04:05:00 - 2.5%"></commented-ship-display>
-                        <commented-ship-display ship="surcouf" new="true" comment="Limited Build - 00:35:00 - 2.5%"></commented-ship-display>
-                        <commented-ship-display ship="forbin" new="true" comment="Limited Build - 00:23:00 - 5%"></commented-ship-display>
-                        <commented-ship-display ship="le_triomphant" new="true" comment="Event Shop - 8000 / Drop - B3, D3 (Boss Only)"></commented-ship-display>
-                        <commented-ship-display ship="emile_bertin" new="true" comment="Radiant Iris - 10k, 15k, 40k, 60k"></commented-ship-display>
-                        <commented-ship-display ship="le_mars" new="true" comment="Event Shop - 2000 / Drop - A3, B2, C3, D2, D3"></commented-ship-display>
+                        <commented-ship-display ship="alabama" new="true" comment="Limited Build - 05:00:00 - 2%"></commented-ship-display>
+                        <commented-ship-display ship="baltimore" new="true" comment="Limited Build - 02:00:00 - 2.0%"></commented-ship-display>
+                        <commented-ship-display ship="birmingham" new="true" comment="Limited Build - 01:25:00 - 2.5%"></commented-ship-display>
+                        <commented-ship-display ship="aylwin" new="true" comment="Limited Build - 00:20:00 - 5.0% / Drop - B/D"></commented-ship-display>
+                        <commented-ship-display ship="cavalla" new="true" comment="Event Shop - 8000 / Drop B3/D3 (Boss Only)"></commented-ship-display>
+                        <commented-ship-display ship="bataan" new="true" comment="Black Battle Star Accumulation"></commented-ship-display>
+                        <commented-ship-display ship="san_juan" new="true" comment="Oil Consumption Accumulation"></commented-ship-display>
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -161,14 +159,10 @@ table.wikitablewide td {
                     </td>
                 </tr>
                 <tr>
-                    <td>
-                        <commented-ship-display ship="emile_bertin" retrofit="true"></commented-ship-display>              
+                    <td>            
                     </td>
                     <td>
-                        <commented-ship-display ship="forbin" retrofit="true"></commented-ship-display> 
-                        <commented-ship-display ship="le_mars" retrofit="true"></commented-ship-display> 
-                        <commented-ship-display ship="emile_bertin" retrofit="true"></commented-ship-display>  
-                        <commented-ship-display ship="nicholas" retrofit="true"></commented-ship-display>  
+                        <commented-ship-display ship="sims" retrofit="true"></commented-ship-display> 
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -183,29 +177,19 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <commented-ship-display ship="le_malin" skin="2" new="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="dunkerque" skin="3" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="le_mars" skin="3" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="forbin" skin="3" new="true" skin-bg="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="l_opiniatre" skin="2" new="true" skin-bg="true" skin-limited="true" "></commented-ship-display>
-                        <commented-ship-display ship="dunkerque" skin="2" skin-bg="true" skin-l2d="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="emile_bertin" skin="2" skin-bg="true" skin-l2d="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="forbin" skin="2"  skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="le_mars" skin="2" skin-bg="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="javelin" skin="5" new="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="cavalla" skin="2" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="baltimore" skin="2" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="aylwin" skin="2" new="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="birmingham" skin="2" new="true" skin-bg="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="bataan" skin="2" new="true" skin-bg="true" skin-limited="true" "></commented-ship-display>
                     </td>
                     <td>
-                        <commented-ship-display ship="dunkerque" skin="3" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="le_mars" skin="3" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="forbin" skin="3" new="true" skin-bg="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="dunkerque" skin="2" skin-bg="true" skin-l2d="true" skin-limited="true"  new="true"></commented-ship-display>
-                        <commented-ship-display ship="emile_bertin" skin="2" skin-bg="true" skin-l2d="true" skin-limited="true"  new="true"></commented-ship-display>
-                        <commented-ship-display ship="forbin" skin="2"  skin-limited="true" new="true"></commented-ship-display>
-                        <commented-ship-display ship="le_mars" skin="2" skin-bg="true" skin-limited="true" new="true"></commented-ship-display>
-                        <commented-ship-display ship="javelin" skin="5" new="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="ibuki" skin="2" new="true" skin-limited="true" skin-l2d="true" skin-bg="true"></commented-ship-display>
-                        <commented-ship-display ship="izumo" skin="2" new="true" skin-limited="true" skin-bg="true"></commented-ship-display>
-                        <commented-ship-display ship="monarch" skin="3" new="true" skin-limited="true" skin-bg="true"></commented-ship-display>
+                        <commented-ship-display ship="cavalla" skin="2" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="baltimore" skin="2" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="aylwin" skin="2" new="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="birmingham" skin="2" new="true" skin-bg="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="bataan" skin="2" new="true" skin-bg="true" skin-limited="true" "></commented-ship-display>
+                        <commented-ship-display ship="bataan" skin="2" new="true" skin-bg="true" skin-limited="true" "></commented-ship-display>
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -234,9 +218,10 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>                        
-                        <img src="https://media.alg-wiki.com/assets/event_banner/rain_furniture.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/cyberspace_jp.png" style="width: 100%">
                     </td>
                     <td>
+                        <img src="https://media.alg-wiki.com/assets/event_banner/cyberspace_en.png" style="width: 100%">
                     </td>
                 </tr>
             </table>
