--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@ table.wikitablewide td {
                         <commented-ship-display ship="san_juan" new="true" comment="Oil Consumption Accumulation"></commented-ship-display>
                     </td>
                     <td>
+                        <commented-ship-display ship="jupiter" new="true" comment="First Anniversary Login Reward"></commented-ship-display>
                         <commented-ship-display ship="alabama" new="true" comment="Limited Build - 05:00:00 - 2%"></commented-ship-display>
                         <commented-ship-display ship="baltimore" new="true" comment="Limited Build - 02:00:00 - 2.0%"></commented-ship-display>
                         <commented-ship-display ship="birmingham" new="true" comment="Limited Build - 01:25:00 - 2.5%"></commented-ship-display>
@@ -162,7 +163,6 @@ table.wikitablewide td {
                     <td>            
                     </td>
                     <td>
-                        <commented-ship-display ship="sims" retrofit="true"></commented-ship-display> 
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -177,6 +177,8 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
+                        <commented-ship-display ship="saratoga" skin="5" new="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="vampire" skin="3" skin-limited="true"></commented-ship-display>
                         <commented-ship-display ship="cavalla" skin="2" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
                         <commented-ship-display ship="baltimore" skin="2" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
                         <commented-ship-display ship="aylwin" skin="2" new="true" skin-limited="true"></commented-ship-display>
@@ -184,11 +186,13 @@ table.wikitablewide td {
                         <commented-ship-display ship="bataan" skin="2" new="true" skin-bg="true" skin-limited="true" "></commented-ship-display>
                     </td>
                     <td>
+                        <commented-ship-display ship="saratoga" skin="5" new="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="vampire" skin="3" new="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="cleveland" skin="4" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
                         <commented-ship-display ship="cavalla" skin="2" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
                         <commented-ship-display ship="baltimore" skin="2" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
                         <commented-ship-display ship="aylwin" skin="2" new="true" skin-limited="true"></commented-ship-display>
                         <commented-ship-display ship="birmingham" skin="2" new="true" skin-bg="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="bataan" skin="2" new="true" skin-bg="true" skin-limited="true" "></commented-ship-display>
                         <commented-ship-display ship="bataan" skin="2" new="true" skin-bg="true" skin-limited="true" "></commented-ship-display>
                     </td>
                 </tr>
