added event banners

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@ table.wikitablewide td {
                 </tr>
                 <tr style="text-align: center;">
                     <td>
+                        <img src="https://media.alg-wiki.com/assets/event_banner/angel_or_devil_rerun_jp.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/blue_seas_jp.png" style="width: 100%">
                         <img src="https://media.alg-wiki.com/assets/event_banner/ashen_jp.png" style="width: 100%">
                         <img src="https://media.alg-wiki.com/assets/event_banner/ashen_ru_jp.png" style="width: 100%">
                         <img src="https://media.alg-wiki.com/assets/event_banner/ashen_sk_jp.png" style="width: 100%">
@@ -110,6 +112,9 @@ table.wikitablewide td {
                         <img src="https://media.alg-wiki.com/assets/event_banner/before_the_storm_jp.png" style="width: 100%">
                     </td>
                     <td>
+                        <img src="https://media.alg-wiki.com/assets/event_banner/challenge_mode_en_s1.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/angel_or_devil_en.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/blue_seas_en.png" style="width: 100%">
                         <img src="https://media.alg-wiki.com/assets/event_banner/ashen_en.png" style="width: 100%">
                         <img src="https://media.alg-wiki.com/assets/event_banner/ashen_ru_en.png" style="width: 100%">
                         <img src="https://media.alg-wiki.com/assets/event_banner/ashen_sk_en.png" style="width: 100%">
