Added Empyreal Tragedy bgm

--- a/player.html
+++ b/player.html
@@ -170,6 +170,9 @@
 		<li><span class=able-source data-type=audio/ogg data-src=https://media.alg-wiki.com/assets/bgm/bgm-ai-otr-inst.ogg></span><button type=button>Kizuna Ai - over the reality (Instrumental)</button></li>
 		<li><span class=able-source data-type=audio/ogg data-src=https://media.alg-wiki.com/assets/bgm/bgm-ai-fb-inst.ogg></span><button type=button>Kizuna Ai - future base (Instrumental)</button></li>
 		<li><span class=able-source data-type=audio/ogg data-src=https://media.alg-wiki.com/assets/bgm/bgm-ai-mw-inst.ogg></span><button type=button>Kizuna Ai - melty world (Instrumental)</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src=https://media.alg-wiki.com/assets/bgm/AL005_ItalyStory1.ogg></span><button type=button>Empyreal Tragicomedy Story</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src=https://media.alg-wiki.com/assets/bgm/AL005_ItalyBattle_demo02_1.ogg></span><button type=button>Empyreal Tragicomedy Battle</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src=https://media.alg-wiki.com/assets/bgm/AL005_ItalyBoss_demo03_1.ogg></span><button type=button>Empyreal Tragicomedy Boss</button></li>
 	
 	</ul>
 		
