--- a/player.html
+++ b/player.html
@@ -176,6 +176,28 @@
 		<li><span class=able-source data-type=audio/ogg data-src=https://media.alg-wiki.com/assets/bgm/bgm-cw-story.ogg></span><button type=button>A New Crosswave - Story</button></li>
 		<li><span class=able-source data-type=audio/ogg data-src=https://media.alg-wiki.com/assets/bgm/bgm-cw-level.ogg></span><button type=button>A New Crosswave - level</button></li>
 		<li><span class=able-source data-type=audio/ogg data-src=https://media.alg-wiki.com/assets/bgm/bgm-cw-battle-boss.ogg></span><button type=button>A New Crosswave - Boss</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src="https://media.alg-wiki.com/assets/bgm/main_AZURLANE_0918_mix.ogg"></span><button type=button>Crescendo of Polaris - cœur</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src="https://media.alg-wiki.com/assets/bgm/inst_AZURLANE_1018_mix.ogg"></span><button type=button>Crescendo of Polaris - cœur (Instrumental)</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src="https://media.alg-wiki.com/assets/bgm/watashi_wa_numba_wan.ogg"></span><button type=button>San Diego - Watashi Wa No.1</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src="https://media.alg-wiki.com/assets/bgm/unicorn_my_night.ogg"></span><button type=button>Unicorn - My Night</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src="https://media.alg-wiki.com/assets/bgm/s04_Phantom9.ogg"></span><button type=button>Enterprise - Phantom 9</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src="https://media.alg-wiki.com/assets/bgm/s05_Cleveland_13_BRIGHT BATTLE_STARS.ogg"></span><button type=button>Cleveland - 13 Battle Star</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src=https://media.alg-wiki.com/assets/bgm/holo_aqua_home.ogg></span><button type=button>Hololive - Aqua</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src=https://media.alg-wiki.com/assets/bgm/holo_ayame_home.ogg></span><button type=button>Hololive - Ayame</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src=https://media.alg-wiki.com/assets/bgm/holo_fubuki_home.ogg></span><button type=button>Hololive - Fubuki</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src=https://media.alg-wiki.com/assets/bgm/holo_matsuri_home.ogg></span><button type=button>Hololive - Matsuri</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src=https://media.alg-wiki.com/assets/bgm/holo_mio_home.ogg></span><button type=button>Hololive - Mio</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src=https://media.alg-wiki.com/assets/bgm/holo_shion_home.ogg></span><button type=button>Hololive - Shion</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src=https://media.alg-wiki.com/assets/bgm/holo_sora_home.ogg></span><button type=button>Hololive - Sora</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src="https://media.alg-wiki.com/assets/bgm/holo_I_can't_control_my_self.ogg"></span><button type=button>Hololive - I can't control myself by AZKi</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src="https://media.alg-wiki.com/assets/bgm/holo_I_can't_control_my_self_inst.ogg"></span><button type=button>Hololive - I can't control myself by AZKi (Instrumental)</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src="https://media.alg-wiki.com/assets/bgm/holo_Fake_Fake_Fake.ogg"></span><button type=button>Hololive - Fake Fake Fake by AZKi</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src="https://media.alg-wiki.com/assets/bgm/holo_Fake_Fake_Fake_inst.ogg"></span><button type=button>Hololive - Fake Fake Fake by AZKi (Instrumental)</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src="https://media.alg-wiki.com/assets/bgm/holo_inochi.ogg"></span><button type=button>Hololive - Inochi by AZKi</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src="https://media.alg-wiki.com/assets/bgm/holo_inochi_inst.ogg"></span><button type=button>Hololive - Inochi by AZKi (Instrumental)</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src="https://media.alg-wiki.com/assets/bgm/holo_ShinySmilyStory.ogg"></span><button type=button>Hololive - Shiny Smily Story</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src="https://media.alg-wiki.com/assets/bgm/holo_ShinySmilyStory_inst.ogg"></span><button type=button>Hololive - Shiny Smily Story (Instrumental)</button></li>
+		<li><span class=able-source data-type=audio/ogg data-src="https://media.alg-wiki.com/assets/bgm/holo_TOKIWA.ogg"></span><button type=button>Hololive - TOKIWA</button></li>
 	
 	</ul>
 		
