--- a/ship.html
+++ b/ship.html
@@ -292,7 +292,7 @@
 		<tr>
 			<td style="width:20%">
 				<b>
-					<font style="vertical-align: inherit;">Weibo</font>
+					<font style="vertical-align: inherit;">Web</font>
 				</b>
 			</td>
 			<td style="width:80%">
