Updated home page

--- a/index.html
+++ b/index.html
@@ -102,25 +102,10 @@ table.wikitablewide td {
                 </tr>
                 <tr style="text-align: center;">
                     <td>
-                        <img src="https://media.alg-wiki.com/assets/event_banner/angel_or_devil_rerun_jp.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/blue_seas_jp.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/ashen_jp.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/ashen_ru_jp.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/ashen_sk_jp.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/ashen_oa_jp.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/pack_jp_731.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/before_the_storm_jp.png" style="width: 100%">
+                        
                     </td>
                     <td>
-                        <img src="https://media.alg-wiki.com/assets/event_banner/challenge_mode_en_s1.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/angel_or_devil_en.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/blue_seas_en.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/ashen_en.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/ashen_ru_en.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/ashen_sk_en.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/ashen_oa_en.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/pack_en_731.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/approaching_storm_en.png" style="width: 100%">
+                        
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -135,23 +120,28 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <commented-ship-display ship="alabama" new="true" comment="Limited Build - 05:00:00 - 2%"></commented-ship-display>
-                        <commented-ship-display ship="baltimore" new="true" comment="Limited Build - 02:00:00 - 2.0%"></commented-ship-display>
-                        <commented-ship-display ship="birmingham" new="true" comment="Limited Build - 01:25:00 - 2.5%"></commented-ship-display>
-                        <commented-ship-display ship="aylwin" new="true" comment="Limited Build - 00:20:00 - 5.0% / Drop - B/D"></commented-ship-display>
-                        <commented-ship-display ship="cavalla" new="true" comment="Event Shop - 8000 / Drop B3/D3 (Boss Only)"></commented-ship-display>
-                        <commented-ship-display ship="bataan" new="true" comment="Black Battle Star Accumulation"></commented-ship-display>
-                        <commented-ship-display ship="san_juan" new="true" comment="Oil Consumption Accumulation"></commented-ship-display>
+                        <commented-ship-display ship="amagi" comment="Limited Build - 04:25:00 - 2%"></commented-ship-display>
+                        <commented-ship-display ship="tosa" new="true" comment="Limited Build - 04:30:00 - 2.0%"></commented-ship-display>
+                        <commented-ship-display ship="kaga_bb" comment="Limited Build - 04:30:00 - 0.5% | Event Shop - 8000 | Drop - B3/D3"></commented-ship-display>
+                        <commented-ship-display ship="ashigara" comment="Limited Build - 01:55:00 - 2.5%"></commented-ship-display>
+                        <commented-ship-display ship="hanazuki" new="true" comment="Limited Build - 00:29:00 - 2.5%"></commented-ship-display>
+                        <commented-ship-display ship="naganami" new="true" comment="Limited Build - 00:27:00 - 2.5%"></commented-ship-display>
+                        <commented-ship-display ship="makinami" comment="Point Accumulation"></commented-ship-display>
+                        <commented-ship-display ship="naka" comment="Limited Build - 01:20:00 - 5.0%"></commented-ship-display>
+                        <commented-ship-display ship="hatakaze" comment="Limited Build - 00:20:00 - 5.0% | Drop - A3/C3/B2/D2"></commented-ship-display>                        
+                        <commented-ship-display ship="little_renown" new="true" comment="NPC Trust Accumulation"></commented-ship-display>
                     </td>
                     <td>
-                        <commented-ship-display ship="jupiter" new="true" comment="First Anniversary Login Reward"></commented-ship-display>
-                        <commented-ship-display ship="alabama" new="true" comment="Limited Build - 05:00:00 - 2%"></commented-ship-display>
-                        <commented-ship-display ship="baltimore" new="true" comment="Limited Build - 02:00:00 - 2.0%"></commented-ship-display>
-                        <commented-ship-display ship="birmingham" new="true" comment="Limited Build - 01:25:00 - 2.5%"></commented-ship-display>
-                        <commented-ship-display ship="aylwin" new="true" comment="Limited Build - 00:20:00 - 5.0% / Drop - B/D"></commented-ship-display>
-                        <commented-ship-display ship="cavalla" new="true" comment="Event Shop - 8000 / Drop B3/D3 (Boss Only)"></commented-ship-display>
-                        <commented-ship-display ship="bataan" new="true" comment="Black Battle Star Accumulation"></commented-ship-display>
-                        <commented-ship-display ship="san_juan" new="true" comment="Oil Consumption Accumulation"></commented-ship-display>
+                        <commented-ship-display ship="amagi" comment="Limited Build - 04:25:00 - 2%"></commented-ship-display>
+                        <commented-ship-display ship="tosa" new="true" comment="Limited Build - 04:30:00 - 2.0%"></commented-ship-display>
+                        <commented-ship-display ship="kaga_bb" comment="Limited Build - 04:30:00 - 0.5% | Event Shop - 8000 | Drop - B3/D3"></commented-ship-display>
+                        <commented-ship-display ship="ashigara" comment="Limited Build - 01:55:00 - 2.5%"></commented-ship-display>
+                        <commented-ship-display ship="hanazuki" new="true" comment="Limited Build - 00:29:00 - 2.5%"></commented-ship-display>
+                        <commented-ship-display ship="naganami" new="true" comment="Limited Build - 00:27:00 - 2.5%"></commented-ship-display>
+                        <commented-ship-display ship="makinami" comment="Point Accumulation"></commented-ship-display>
+                        <commented-ship-display ship="naka" comment="Limited Build - 01:20:00 - 5.0%"></commented-ship-display>
+                        <commented-ship-display ship="hatakaze" comment="Limited Build - 00:20:00 - 5.0% | Drop - A3/C3/B2/D2"></commented-ship-display>                        
+                        <commented-ship-display ship="little_renown" new="true" comment="NPC Trust Accumulation"></commented-ship-display>
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -165,9 +155,11 @@ table.wikitablewide td {
                     </td>
                 </tr>
                 <tr>
-                    <td>            
+                    <td>
+                        <commented-ship-display ship="isuzu" new="true" retrofit="true"></commented-ship-display>            
                     </td>
                     <td>
+                        <commented-ship-display ship="isuzu" new="true" retrofit="true"></commented-ship-display>   
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -182,23 +174,22 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <commented-ship-display ship="saratoga" skin="5" new="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="vampire" skin="3" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="cavalla" skin="2" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="baltimore" skin="2" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="aylwin" skin="2" new="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="birmingham" skin="2" new="true" skin-bg="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="bataan" skin="2" new="true" skin-bg="true" skin-limited="true" "></commented-ship-display>
+                        <commented-ship-display ship="tosa" skin="2" new="true" skin-limited="true" skin-bg="true"></commented-ship-display>
+                        <commented-ship-display ship="ashigara" skin="3" skin-limited="true" skin-bg="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="hiei" skin="4" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="naka" skin="2" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="hanazuki" skin="2" new="true" skin-limited="true" skin-bg="true"></commented-ship-display>
+                        <commented-ship-display ship="makinami" skin="2" new="true" skin-bg="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="naganami" skin="2" new="true" skin-bg="true" skin-limited="true" "></commented-ship-display>
                     </td>
                     <td>
-                        <commented-ship-display ship="saratoga" skin="5" new="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="vampire" skin="3" new="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="cleveland" skin="4" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="cavalla" skin="2" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="baltimore" skin="2" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="aylwin" skin="2" new="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="birmingham" skin="2" new="true" skin-bg="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="bataan" skin="2" new="true" skin-bg="true" skin-limited="true" "></commented-ship-display>
+                        <commented-ship-display ship="tosa" skin="2" new="true" skin-limited="true" skin-bg="true"></commented-ship-display>
+                        <commented-ship-display ship="ashigara" skin="3" skin-limited="true" skin-bg="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="hiei" skin="4" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="naka" skin="2" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="hanazuki" skin="2" new="true" skin-limited="true" skin-bg="true"></commented-ship-display>
+                        <commented-ship-display ship="makinami" skin="2" new="true" skin-bg="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="naganami" skin="2" new="true" skin-bg="true" skin-limited="true" "></commented-ship-display>
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -227,10 +218,8 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>                        
-                        <img src="https://media.alg-wiki.com/assets/event_banner/cyberspace_jp.png" style="width: 100%">
                     </td>
                     <td>
-                        <img src="https://media.alg-wiki.com/assets/event_banner/cyberspace_en.png" style="width: 100%">
                     </td>
                 </tr>
             </table>
